Solución para MOCKITO AGENT WARNING (aún así, el warning sigue apareciendo)